syntax = "proto3";

package org.e2eelab.skissm.proto;

option java_package = "org.e2eelab.skissm.proto";
option java_outer_classname = "E2eePreKeyBundle";
option java_multiple_files = true;

import "e2ee_address.proto";
import "signed_pre_key_public.proto";
import "one_time_pre_key_public.proto";

message e2ee_pre_key_bundle {
    e2ee_address peer_address = 1;
    bytes identity_key_public = 2;
    signed_pre_key_public signed_pre_key_public = 3;
    one_time_pre_key_public one_time_pre_key_public = 4;
}