syntax = "proto3";

package org.e2eelab.lib.protobuf;

import "e2ee_msg_payload.proto";

message e2ee_pre_key_payload {
  bytes alice_identity_key = 1;
  bytes alice_ephemeral_key = 2;
  bytes bob_signed_pre_key = 3;
  bytes bob_one_time_pre_key = 4;
  e2ee_msg_payload msg_payload = 5;
}