/*
 * Copyright Â© 2020-2021 by Academia Sinica
 *
 * This file is part of SKISSM.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * SKISSM is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with SKISSM.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";

package skissm;

option java_package = "org.e2eelab.skissm.proto";
option java_outer_classname = "E2eeSession";

import "skissm/e2ee_address.proto";
import "skissm/e2ee_ratchet.proto";

message e2ee_session {
    uint32 version = 1;
    uint32 cipher_suite_id = 2;
    string session_id = 3;
    skissm.e2ee_address session_owner = 4;
    skissm.e2ee_address from = 5;
    skissm.e2ee_address to = 6;
    skissm.e2ee_ratchet ratchet = 7;
    bytes alice_identity_key = 8;
    bytes alice_ephemeral_key = 9;
    bytes bob_signed_pre_key = 10;
    uint32 bob_signed_pre_key_id = 11;
    bytes bob_one_time_pre_key = 12;
    uint32 bob_one_time_pre_key_id = 13;

    bool responded = 14;
    bytes associated_data = 15;
}
